--- a/DoAnMon/Areas/Admin/Views/Home/PhanQuyen.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/PhanQuyen.cshtml
@@ -6,16 +6,16 @@
 }
 
 
-<h1>Manage Users</h1>
+<h1 style="color: #FA7070; padding-bottom:20px; text-align:center;">QUẢN LÝ NGƯỜI DÙNG</h1>
 
-<table class="table">
+	<table class="table" style="font-size: 20px;  border-collapse: collapse;border: 1px solid #000; border-right: none; border-right: 1px solid #000; ;">
 	<thead>
 		<tr>
-			<th>User ID</th>
-			<th>User Name</th>
-			<th>Name</th>
+			<th>Mã người dùng</th>
+			<th>Mã số</th>
+			<th>Tên</th>
 			<th>Email</th>
-			<th>Roles</th>
+			<th>Vai trò</th>
 			<th></th>
 		</tr>
 	</thead>
