--- a/DoAnMon/Areas/Admin/Views/Home/TrangChu.cshtml
+++ b/DoAnMon/Areas/Admin/Views/Home/TrangChu.cshtml
@@ -4,5 +4,5 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<h2>Chào mừng Bân đến với Bình nguyên Admin</h2>
+<h2>Chào mừng </h2>
 
