--- a/DoAnMon/Views/Shared/_Layout1.cshtml
+++ b/DoAnMon/Views/Shared/_Layout1.cshtml
@@ -63,23 +63,23 @@
 				<ol class="carousel-indicators">
 					<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 					<li data-target="#myCarousel" data-slide-to="1"></li>
-					<li data-target="#myCarousel" data-slide-to="2"></li>
-				</ol>
+@* 					<li data-target="#myCarousel" data-slide-to="2"></li>
+ *@				</ol>
 
 				<!-- Wrapper for slides -->
 				<div class="carousel-inner">
 
 					<div class="item active">
-						<img src="/Images/banner_google.png" alt="Los Angeles" style="width: 100%; height: 233px;">
+						<img src="/Images/bannerhutech.png" alt="Hutech" style="width: 100%; height: 180px;">
 					</div>
 
 					<div class="item">
-						<img src="/Images/LOGO.png" alt="Los Angeles" style="width: 100%; height: 233px;">
+						<img src="/Images/bannerlogo.jpg" alt="Logo OnlyA" style="width: 100%; height: 180px;">
 					</div>
 
-					<div class="item">
+					@* <div class="item">
 						<img src="/Images/banner_google.png" alt="Los Angeles" style="width: 100%; height: 233px;">
-					</div>
+					</div> *@
 
 				</div>
 			</div>
@@ -102,14 +102,25 @@
 			</div>
 			<div class="header-right" style="text-align: center;">
 				@{
-					if (User.IsInRole("Teacher"))
+					if (User.IsInRole("Admin"))
 					{
+
+						<div style="display: inline-block;">
+							<a href="/Admin/Home/PhanQuyen" class="btn btn-info" style="background-color: #ECCA9C">
+								<b style="font-size: 18px; display: inline-block;">Admin</b>
+							</a>
+						</div>
+					}
+					if (User.IsInRole("Teacher") || User.IsInRole("Admin"))
+					{
+
 						<div style="display: inline-block;">
 							<a href="/ClassRooms/Create" class="btn btn-info" title="Create Classroom" style="background-color: #7fb3d5">
 								<b style="font-size: 18px; display: inline-block;">Quản lý</b>
 							</a>
 						</div>
 					}
+					
 				}	
 				<div style="display: inline-block;">
 					<div>
