--- a/DoAnMon/Views/ClassRooms/Create.cshtml
+++ b/DoAnMon/Views/ClassRooms/Create.cshtml
@@ -19,8 +19,10 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #00CA79;">
-        <a asp-controller="ClassRooms" asp-action="Index" class="navbar-brand" style="font-family: 'Roboto Slab', sans-serif;">Admin</a>
+    <nav class="navbar navbar-expand-lg navbar-dark " style="background-color: #00CA79;padding: 0 5;">
+        <a asp-controller="ClassRooms" asp-action="Index" class="navbar-brand" style="font-family: 'Roboto Slab', sans-serif; padding: 0;">
+            <img style="padding: 0;" src="~/images/xanh.png" alt="Logo" width="70" height="auto" />
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
