--- a/DoAnMon/Views/ClassRooms/Details.cshtml
+++ b/DoAnMon/Views/ClassRooms/Details.cshtml
@@ -351,7 +351,7 @@
 </style>
 
 <div>
-	<img class="img-fluid" src="/Images/banner_google.png" alt="No Images" />
+	<img class="img-fluid" src="/Images/bannerlogo.jpg" alt="No Images" style="width: 100%; height: 200px;"/>
 </div>
 <div class="class-info">
 	<h1 style="font-family: Poppins, sans-serif;font-size: 28px;">@Model.ClassRoom.Name</h1>
