--- a/DoAnMon/Views/ClassRooms/Index.cshtml
+++ b/DoAnMon/Views/ClassRooms/Index.cshtml
@@ -20,10 +20,10 @@
 			foreach (var viewModel in Model)
 			{
 				<div class="classroom">
-					<div class="card-top" style="background-image: url(/Images/anhclass.png);background-size: cover; background-position:center;">
+					<div class="card-top" style="background-image: url(/Images/anhclass.png);background-size: cover; background-position:center;color: white;">
 						<h2 style="font-family: Poppins, sans-serif; font-size: 24px">@viewModel.ClassRoom.Name</h2>
-						<div class="meta" style="font-family: Poppins, sans-serif; font-size: 14px">@viewModel.ClassRoom.Description</div>
-						<p style="padding-top: 3%; font-family: Poppins, sans-serif; font-size: 16px">@viewModel.Owner.Name</p>
+						<div class="meta" style="font-family: Poppins, sans-serif; font-size: 13px;font-weight:300;color: white;">@viewModel.ClassRoom.Description</div>
+						<p style="padding-top: 3%; font-family: Poppins, sans-serif; font-size: 16px; font-weight:500">@viewModel.Owner.Name</p>
 					</div>
 					<div class="card-bottom">
 						<img class="PNzAWd" aria-hidden="true" src="/Imgs_avtUser/@viewModel.Owner.UrlAvt">
