--- a/DoAnMon/Views/ClassRooms/GetAllBTStu.cshtml
+++ b/DoAnMon/Views/ClassRooms/GetAllBTStu.cshtml
@@ -26,16 +26,16 @@
 	<thead>
 		<tr>
 			<th>
-				@Html.DisplayNameFor(model => model.ClassId)
+				Mã lớp
 			</th>
 			<th>
-				@Html.DisplayNameFor(model => model.SubmittedAt)
+				Thời gian nộp
 			</th>
 			<th>
-				@Html.DisplayNameFor(model => model.UserId)
+				Tên người nộp
 			</th>
 			<th>
-				@Html.DisplayNameFor(model => model.Urlbainop)
+				File nộp
 			</th>
 		</tr>
 	</thead>
